Fix spacing, remove ignored app.css from repo

--- a/src/style/quillbox.scss
+++ b/src/style/quillbox.scss
@@ -4,6 +4,8 @@
   max-width: 640px;
   height: 400px;
   margin: auto;
+  @include display(flex);
+  @include flex-direction(column);
 }
 
 .ql-toolbar {
